--- a/src/auth/login/login.css
+++ b/src/auth/login/login.css
@@ -1,7 +1,8 @@
 body {
-    font-family: sans-serif;
-    background: #eee;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #66d2ea;
     padding: 20px;
+    
 }
 
 .container {
@@ -10,10 +11,23 @@ body {
     background: white;
     padding: 30px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow:  10px  10px 5px #003642;
+}
+
+.container, img {
+    width: 100%;
+}
+
+h2{
+    color: #003642;
 }
 
 input, button {
-    width: 100%;
+    width: 80%;
     margin: 10px 0;
     padding: 10px;
 }
@@ -21,3 +35,10 @@ input, button {
 .error {
     color: red;
 }
+
+button:hover{
+    background-color: #0082a0;
+    color: white;
+}
+
+
