--- a/src/auth/register/register.css
+++ b/src/auth/register/register.css
@@ -1,15 +1,28 @@
 body {
-    font-family: sans-serif;
-    background: #f0f0f0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #66d2ea;
     padding: 20px;
 }
 
-.container {
+.container__register {
     max-width: 500px;
     margin: auto;
     background: white;
     padding: 30px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow:  10px  10px 5px #003642;
+}
+
+h2{
+    color: #003642;
+}
+
+.container__register img{
+    width: 80%;
 }
 
 input, button {
@@ -24,4 +37,9 @@ input, button {
 
 .success {
     color: green;
+}
+
+button:hover{
+    background-color: #0082a0;
+    color: white;
 }
